# aifw

./: .gitignore  AGENT_HANDOVER.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  catalog-info.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  task.yml
.github/scripts/: bootstrap_labels.py
.github/workflows/: ci.yml  publish.yml  receive-windsurf-rules.yml
.windsurf/workflows/: agentic-coding.md  governance-check.md  hotfix.md  release.md  repo-health-check.md  workflow-index.md
src/aifw/: __init__.py  admin.py  apps.py  constants.py  cost.py  exceptions.py  models.py  privacy.py  schema.py  service.py  signals.py  types.py
src/aifw/management/commands/: check_aifw_config.py  init_aifw_config.py  seed_nl2sql_examples.py  validate_schema.py
src/aifw/migrations/: 0001_initial.py  0002_aiactiontype_budget_per_day.py  0003_aiusagelog_tenant_object_metadata.py  0004_alter_aiactiontype_options_alter_aiusagelog_options_and_more.py  0004_schemasource.py  0005_alter_aiactiontype_options_alter_aiusagelog_options_and_more.py  0005_merge_schemasource_alter.py  0005_quality_level_routing.py  0006_delete_schemasource_alter_aiactiontype_options_and_more.py  0006_nl2sql_example_feedback.py  0006_quality_level_routing.py  0007_nl2sql_app_label.py  0008_nl2sql_example_feedback.py  0009_aiusagelog_privacy_mode.py  0010_alter_aiusagelog_privacy_mode_and_more.py
src/aifw/nl2sql/: __init__.py  apps.py  clarification.py  engine.py  models.py  results.py  semantic.py
src/aifw/nl2sql/management/commands/: promote_feedback.py  seed_nl2sql_examples.py  validate_schema.py
src/aifw/nl2sql/migrations/: 0001_initial_from_core.py
tests/: settings.py  test_budget_cache.py  test_cache.py  test_cost.py  test_init_aifw_config.py  test_log_usage.py  test_lookup_cascade.py  test_models.py  test_nl2sql_promptfw.py  test_nl2sql_readonly.py  test_privacy.py  test_routing_integration.py  test_schema.py  test_semantic_bridge.py  test_service.py  test_tier.py
