[project]
name = "iil-aifw"
version = "0.8.0"
description = "Django AI Services Framework — DB-driven LLM routing, quality tiers, NL2SQL"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Achim Dehnert", email = "achim@dehnert.com"}
]
keywords = ["django", "llm", "ai", "openai", "anthropic", "litellm", "ai-services", "nl2sql", "text-to-sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "Django>=5.0,<6.0",
    "litellm>=1.30",
    "tenacity>=8.2",
    "asgiref>=3.7",
]

[project.optional-dependencies]
nl2sql = [
    # No extra Python packages — aifw.nl2sql uses only core deps (Django + litellm).
    # Activation: add "aifw.nl2sql" to INSTALLED_APPS (activates NL2SQLConfig + migrations).
    # pip install 'iil-aifw[nl2sql]' signals NL2SQL intent, no additional download weight.
]
rag = [
    # Future: Schema-RAG via pgvector (ADR-009 Phase 1, Sprint 16+)
    "pgvector>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "hatch",
    "ruff",
    "iil-promptfw>=0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aifw"]
sources = {"src" = ""}

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
asyncio_mode = "auto"
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
